<resources>

    <string name="app_display_name">Krise</string>
    <string name="app_discription">App discription</string>
    <string name="account_setup">Account Setup</string>
    <string name="splash_screen_sub_text">Sub Text</string>
    <string name="country_name">Country Name</string>
    <string name="update_frequency">Set Update Frequency</string>
    <string name="frequency_text">For better safety increase frequency</string>
    <string name="daily_text">Daily</string>
    <string name="hour_12_text">12 hrs</string>
    <string name="hour_6_text">6 hrs</string>
    <string name="hour_1_text">1 hrs</string>
    <string name="done_text">Done</string>
    <string name="country_code_text">+91</string>
    <string name="phone_no_text">9810831525</string>
    <string name="location_hint">Address</string>
    <string name="app_name">Krise</string>
    <string name="pinky_promise">It\'s a private ritual. God promise ;)</string>
    <string name="seconds_text">It will take less than 5 seconds.</string>
    <string name="could_not_connect">Could not connect to server</string>
    <string name="signingup_wait">Verifying credentials!\nPlease wait...</string>
    <string name="logout">Sign out</string>
    <string name="logout_confirm">Are you sure?</string>

    <!--Splash Screen things-->
    <string name="pre_signup_description">ABC</string>
    <string name="tour_01">ABC</string>
    <string name="tour_02">ABC</string>
    <string name="tour_03">ABC</string>

    <!--Login/Signup-->

    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="edit_name_hint">Name</string>

    <!--Form things-->
    <string name="emergency">Emergency Details</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone">Mobile Number</string>
    <string name="add_image">Add Image</string>
    <string name="e_contacts">Please add atleast 3 Emergency Contacts</string>

    <!-- Error messages -->
    <string name="no_internet_message">Seems like you are not connected to the internet. Please try again later.</string>
    <string name="error_try_again">Something went wrong. \n Please try again later.</string>
    <string name="err_occurred">An error occurred. Please try again.</string>

    <!-- Drawer strings -->
    <string name="settings">Settings</string>

    <!-- Deals history -->

    <!-- Dialog strings -->
    <string name="dialog_call">Call</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- Store details -->

    <!-- Rating system -->
    <string name="submit">Submit</string>
    <string name="refreshlistview_arrow">Content Description Arrow</string>
    <string name="refreshlistview_pulldown">Pull down to refresh…</string>
    <string name="refreshlistview_updating">Updating…</string>
    <string name="refreshlistview_release">Release to refresh…</string>

    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>

    <string name="sort_by">Sort by:</string>

    <string name="my_location">Use my location</string>

    <string name="login_using_email">Login Using Email</string>
    <string name="email">Email</string>
    <string name="email_username">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="email_signup">Sign up</string>
    <string name="already_have_account">Already have an account? Login here.</string>
    <string name="verifying_creds">Verifying credentials..</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    >


</resources>
