
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/size20"
            android:layout_height="match_parent">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/emergency"
                android:id="@+id/formTextView"
                android:textSize="@dimen/size32"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="@dimen/size18"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/loginName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/size24"
                        android:layout_weight="1.25"
                        android:inputType="textPersonName"
                        android:text="@string/name"
                        android:background="#fff"/>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="15dp">
                </View>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/dob"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.25"
                        android:inputType="date"
                        android:textSize="@dimen/size24"
                        android:hint="@string/dob"
                        android:background="#fff"/>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="15dp">
                </View>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_gravity="center">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:layout_weight="1"
                            android:id="@+id/maleRadioButton"
                            android:textSize="@dimen/size24"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:layout_weight="1"
                            android:layout_marginLeft="20dp"
                            android:id="@+id/femaleRadioButton"
                            android:textSize="@dimen/size24"/>
                    </RadioGroup>

                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="15dp">
                </View>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    >
                    <EditText
                        android:id="@+id/phoneNumber"
                        android:layout_width="0dp"
                        android:textSize="@dimen/size24"
                        android:layout_height="40dp"
                        android:layout_weight="1.25"
                        android:inputType="phone"
                        android:hint="@string/phone"
                        android:background="#fff"/>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="15dp">
                </View>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="@dimen/size12"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/size18"
                        android:layout_weight="1.25"
                        android:inputType="textPersonName"
                        android:text="@string/e_contacts"
                        android:background="#fff"/>

                    <EditText
                        android:id="@+id/number1"
                        android:layout_width="fill_parent"
                        android:textSize="@dimen/size24"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/size12"
                        android:layout_weight="1.25"
                        android:inputType="phone"
                        android:background="#fff"/>
                    <EditText
                        android:id="@+id/number2"
                        android:layout_width="fill_parent"
                        android:textSize="@dimen/size24"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/size8"
                        android:layout_weight="1.25"
                        android:inputType="phone"
                        android:background="#fff"/>
                    <EditText
                        android:id="@+id/number3"
                        android:layout_width="fill_parent"
                        android:textSize="@dimen/size24"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/size8"
                        android:layout_weight="1.25"
                        android:inputType="phone"
                        android:background="#fff"/>
                </LinearLayout>
            </LinearLayout>



            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size18">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_image"
                    android:id="@+id/image"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:id="@+id/submit"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
